--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -13,7 +13,6 @@
 	<name>imisintegration-omod</name>
 	<url>http://maven.apache.org</url>
 
-
 	<dependencies>
 		<!-- Begin OpenMRS modules -->
 
@@ -64,6 +63,12 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>webservices.rest-omod</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>webservices.rest-omod-common</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
